--- a/index.html
+++ b/index.html
@@ -19,6 +19,10 @@
             <a-box position='0 0.5 0' color="yellow"></a-box>
         </a-marker>
             
+        <a-marker type='barcode' value='1'>
+            <a-box position='0 0.5 0' color="yellow"></a-box>
+        </a-marker>
+            
         <a-marker id="animated-marker" type='barcode' value='6'>
             <a-entity
                 gltf-model="#animated-asset"
