--- a/index.html
+++ b/index.html
@@ -22,6 +22,10 @@
         <a-marker type='barcode' value='1'>
             <a-box position='0 0.5 0' color="red"></a-box>
         </a-marker>
+       
+        <a-marker type='barcode' value='2'>
+            <a-box position='0 0.5 0' color="red"></a-box>
+        </a-marker>
             
         <a-marker id="animated-marker" type='barcode' value='6'>
             <a-entity
