--- a/index.html
+++ b/index.html
@@ -50,9 +50,9 @@
             </a-entity>
         </a-marker>
         
-        <a-marker id="dice" type='barcode' value='8'>
+        <a-marker id="dice" type='barcode' value='9'>
             <a-entity
-                gltf-model="#animated-asset"
+                gltf-model="#dice"
                 scale="0.2">
             </a-entity>
         </a-marker>
