--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         </a-assets>
        
         <a-assets>
-            <a-asset-item id="barrel" src="https://raw.githubusercontent.com/gerdaman/ARwQR/master/barrel/scene.gltf"></a-asset-item>
+            <a-asset-item id="barrel" src="https://raw.githubusercontent.com/gerdaman/ARwQR/master/barrel/barrel.gltf.gltf"></a-asset-item>
         </a-assets>  
             
         <a-marker type='barcode' value='1'>
