--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         </a-marker>
        
         <a-marker type='barcode' value='6'>
-            <a-box position='0 0.5 0' color="orange"></a-box>
+            <a-box position='0 0.5 0' color="violet"></a-box>
         </a-marker>
             
         <a-marker id="animated-marker" type='barcode' value='7'>
