--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
          <a-marker type='barcode' value='8'>
             <a-entity
                 scale="0.01 0.01 0.01"
+                position='0 1 0'
                 rotate="90 90 0"
                 obj-model="obj: #house">
             </a-entity>
